<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello1">Welcome to Amp Service Program </string>
    <string name="app_name">PowerApp</string>
    <string name="hello2">Press 1 to show amp ussage, 2 to add a House and 3 to exit</string>
    <string name="amp">Amp Display</string>
    <string name="addH">Add House</string>
    <string name="exit">Exit</string>
    <string name="Service">Enter a total service amount in amps</string>
    <string name="Enter">Enter</string>
    <string name="amps">Amp Display</string>
    <string name="main">Exit</string>
    <string name="appliance">Add appliance</string>
    <string name="reset">Reset</string>
    <string name="ampview">This screen will display total amp ussage</string>
    <string name="appview">Enter the name of the appliance</string>
    <string name="reset2">Delete then re-create the database for the app (same schema)</string>
    <string name="HouseName">Enter Name for Your House</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_add_house">AddHouseActivity</string>
    <string name="title_activity_house_config">HouseConfigActivity</string>
    <string name="title_activity_amp_display">AmpDisplayActivity</string>
    <string name="NumberApp">Enter the Number of this applience within the house</string>
    <string name="AppModel">Enter the Model Number for the Appliance</string>
    <string name="AppUssage">Rate your appliance usage on a scale of 1-5 with 5 being the most</string>
    <string name="title_activity_app_display">AppDisplayActivity</string>

</resources>