<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/buttonAmp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amps" />

    <Button
        android:id="@+id/buttonApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appliance" />

    <Button
        android:id="@+id/buttonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="exitOneHandler"
        android:text="@string/main" />

</LinearLayout>