<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello1" />
    
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
  
  
 		 <Button
       	 	android:id="@+id/addHouse_Button_id"
       	 	android:layout_width="wrap_content"
       		 android:layout_height="wrap_content"
       		 android:onClick="myClickHandler"
       		 android:text="@string/addH" 
       		 android:layout_column="0" />
		  
  		   <Button
       		 android:id="@+id/Reset"
       		 android:layout_width="wrap_content"
       		 android:layout_height="wrap_content"
       		 android:text="@string/reset" 
       		 android:layout_column="1" >
		  </Button>
    </TableRow>
    
 

    

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
        
        <Button
        android:id="@+id/amp_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ampDisHandler"
        android:text="@string/amp" >
		</Button>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>

</LinearLayout>